[package]
name = "day_05"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
itertools = "0.10.5"
nom = "7"
smallvec = "1.10.0"
tracking-allocator = { version = "0.4", default-features = false }

# for better data for the tracking-allocator
# [profile.release]
# debug = 1